--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
     </aside>
     <header>
         <container>
-            <div class="hidden" id="aside-btn"><i class="fa-solid fa-circle-user"></i></div>
+            <div class="mobile-header">
+                <div class="hidden" id="aside-btn"><i class="fa-solid fa-circle-user"></i></div>
+                <h1 class="hidden">Welcome</h1>
+                <div class="hidden" id="nav-btn"><i class="fa-solid fa-bars"></i></div>
+            </div>
             <h1>Welcome</h1>
-            <div class="hidden" id="nav-btn"><i class="fa-solid fa-bars"></i></div>
             <ul class="navbar">
                 <li>
                     <i class="fa-solid fa-house"></i><p>Home</p>
