--- a/index.html
+++ b/index.html
@@ -56,9 +56,15 @@
     <header>
         <container>
             <div class="mobile-header">
-                <div class="hidden" id="aside-btn"><i class="fa-solid fa-circle-user"><input type="checkbox" /></i></div>
+                <div class="hidden" id="aside-btn" for="asidecheck">
+                    <input id="asidecheck"type="checkbox" />
+                    <i class="fa-solid fa-circle-user"></i>
+                </div>
                 <h1 class="hidden">Welcome</h1>
-                <div class="hidden" id="nav-btn"><i class="fa-solid fa-bars"><input type="checkbox" /></i></div>
+                <div class="hidden" id="nav-btn" for="navcheck">
+                    <input id="navcheck"type="checkbox" />
+                    <i class="fa-solid fa-bars"></i>
+                </div>
             </div>
             <h1>Welcome</h1>
             <ul class="navbar">
