Coming back to this later

--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     <header>
         <container>
             <div class="mobile-header">
-                <div class="hidden" id="aside-btn" for="asidecheck">
-                    <input id="asidecheck"type="checkbox" />
+                <label class="hidden" id="aside-btn" for="asidecheck">
                     <i class="fa-solid fa-circle-user"></i>
-                </div>
+                </label>
+                <input id="navcheck"type="checkbox" />
                 <h1 class="hidden">Welcome</h1>
-                <div class="hidden" id="nav-btn" for="navcheck">
-                    <input id="navcheck"type="checkbox" />
+                <label class="hidden" id="nav-btn" for="navcheck">
                     <i class="fa-solid fa-bars"></i>
-                </div>
+                </label>
+                <input id="navcheck"type="checkbox" />
             </div>
             <h1>Welcome</h1>
             <ul class="navbar">
